xong login register

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -104,9 +104,15 @@
                                     <mat-icon color="primary" matSuffix>login</mat-icon>
                                 </button>
                             </form>
+                            <a class="with-smedia facebook" href="#" title="" data-ripple=""><i
+                                    class="fa fa-facebook"></i></a>
+                            <a class="with-smedia twitter" href="#" title="" data-ripple=""><i
+                                    class="fa fa-twitter"></i></a>
+                            <a class="with-smedia instagram" href="#" title="" data-ripple=""><i
+                                    class="fa fa-instagram"></i></a>
                             <a class="with-smedia google" href="#" title="" data-ripple=""><i
                                     class="fa fa-google-plus"></i></a>
-                            <span>don't have an account? <a class="we-account underline" routerLink="/register"
+                            <span>don't have an account? <a class="we-account underline" routerLink=""
                                                             title="">register now</a></span>
                         </div>
                     </div>
