--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,11 @@
   </div>
 </div>
 <!--<app-nav-bar2></app-nav-bar2>-->
-<app-navbar></app-navbar>
+<!--<app-navbar></app-navbar>-->
 <router-outlet></router-outlet>
 <!--<app-new></app-new>-->
-
+<!--<app-demo></app-demo>-->
+<!--<app-register></app-register>-->
 <!--<app-posting></app-posting>-->
 
 
