--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -212,7 +212,7 @@
 
     <div class="topbar stick">
         <div class="logo">
-            <a title="" href="newsfeed.html"><img src="../../assets/images/logo.png" alt=""></a>
+            <a title="" routerLink="/home"><img src="../../assets/images/logo.png" alt=""></a>
         </div>
         <div class="top-area">
             <div class="main-menu">
@@ -230,7 +230,7 @@
                 <span>Newsfeed</span>
             </div>
             <ul class="setting-area">
-                <li><a href="newsfeed.html" title="Home" data-ripple=""><i class="fa fa-home"></i></a></li>
+                <li><a routerLink="home" title="Home" data-ripple=""><i class="fa fa-home"></i></a></li>
                 <li>
                     <a href="#" title="Friend Requests" data-ripple="">
                         <i class="fa fa-user"></i><em class="bg-red">5</em>
@@ -740,7 +740,7 @@
                     </ul>
                     <span class="seting-title">User setting <a href="#" title="">see all</a></span>
                     <ul class="log-out">
-                        <li><a href="about.html" title=""><i class="ti-user"></i> view profile</a></li>
+                        <li><a routerLink="/home/profile" title=""><i class="ti-user"></i> view profile</a></li>
                         <li><a href="setting.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
                         <li><a href="#" title=""><i class="ti-target"></i>activity log</a></li>
                         <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
