--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
-<app-nav-bar2></app-nav-bar2>
-<router-outlet></router-outlet>
+<div class="theme-layout">
+    <app-nav-bar2></app-nav-bar2>
+    <router-outlet></router-outlet>
+</div>
