chia component trong profile

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -66,13 +66,13 @@
                                         <div class="col-lg-10 col-md-9">
                                             <ul class="profile-menu">
                                                 <li>
-                                                    <a class="" routerLink="/profile">Timeline</a>
+                                                    <a class="" routerLink="/home/profile">Timeline</a>
                                                 </li>
                                                 <li>
-                                                    <a class="active" routerLink="/profile/about">About</a>
+                                                    <a class="active" routerLink="/home/profile/info">About</a>
                                                 </li>
                                                 <li>
-                                                    <a class="" routerLink="/profile/friend">Friends</a>
+                                                    <a class="" routerLink="/home/profile/friend">Friends</a>
                                                 </li>
                                                 <li>
                                                     <a class="" href="timeline-photos.html">Photos</a>
