--- a/src/app/form-login/register/register.component.html
+++ b/src/app/form-login/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="www-layout">
     <section>
         <div class="gap no-gap signin whitish medium-opacity register">
-            <div class="bg-image" style="background-image:url(../../assets/images/resources/theme-bg.jpg)"></div>
+            <div class="bg-image" style=" background-image:url(../../assets/images/resources/theme-bg.jpg)"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
@@ -25,55 +25,64 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="we-login-register">
+                        <div style="width: 350px" class="we-login-register">
                             <div class="form-title">
                                 <i class="fa fa-key"></i>Sign Up
                                 <mat-error *ngIf="status" >{{status}}</mat-error>
                             </div>
-                            <form class="we-form" #f="ngForm" (ngSubmit)="f.form.valid && ngSubmit()" novalidate>
+<!--                            <form class="we-form" #f="ngForm" (ngSubmit)="f.form.valid && ngSubmit()" novalidate>-->
+                            <form class="we-form"  (ngSubmit)="ngSubmit()" novalidate [formGroup]="form">
                                 <!--Name-->
 
                                 <mat-form-field style="width: 250px;  " appearance="outline">
                                     <mat-label>Name</mat-label>
-                                    <input matInput placeholder="Enter your fullname" name="name" required minlength="3" maxlength="50" [(ngModel)]="form.name" #name="ngModel">
+                                    <input matInput placeholder="Enter your fullname" formControlName="name">
                                     <mat-icon color="primary" matSuffix>account_circle</mat-icon>
-                                    <mat-error *ngIf="name.hasError('required')">The username is required</mat-error>
-                                    <mat-error *ngIf="name.hasError('minlength')">The username more than 3 characters</mat-error>
-                                    <mat-error *ngIf="name.hasError('maxlength')">The username is less than 50 characters</mat-error>
+                                    <mat-error *ngIf="form.get('name')?.hasError('required')">The username is required</mat-error>
+                                    <mat-error *ngIf="form.get('name')?.hasError('minlength')">The username more than 3 characters</mat-error>
                                 </mat-form-field>
                                 <br>
                                 <!--UserName-->
                                 <mat-form-field style="width: 250px" appearance="outline">
                                     <mat-label>Username</mat-label>
-                                    <input matInput placeholder="Enter the username" name="username" required minlength="3" maxlength="50" [(ngModel)]="form.username" #username="ngModel">
+                                    <input matInput placeholder="Enter the username" formControlName="username">
                                     <mat-icon color="primary" matSuffix>account_circle</mat-icon>
-                                    <mat-error *ngIf="username.hasError('required')">The username is required</mat-error>
-                                    <mat-error *ngIf="username.hasError('minlength')">The username more than 3 characters</mat-error>
-                                    <mat-error *ngIf="username.hasError('maxlength')">The username is less than 50 characters</mat-error>
+                                    <mat-error *ngIf="form.get('username')?.hasError('required')">The username is required</mat-error>
+                                    <mat-error *ngIf="form.get('username')?.hasError('minlength')">The username more than 3 characters</mat-error>
                                 </mat-form-field>
                                 <br>
                                 <!--Email-->
                                 <mat-form-field style="width: 250px; padding-bottom: 10px" appearance="outline">
                                     <mat-label>Email</mat-label>
-                                    <input matInput placeholder="Enter the email" name="email" [(ngModel)]="form.email" [formControl]="emailFormControl" required>
+                                    <input matInput placeholder="Enter the email" formControlName="email">
                                     <mat-icon color="primary" matSuffix>account_circle</mat-icon>
-                                    <mat-error *ngIf="emailFormControl.hasError('required')">The email is required</mat-error>
-                                    <mat-error *ngIf="emailFormControl.hasError('email')">The email invalid! Please try again-> ex: abc@gmail.com</mat-error>
+                                    <mat-error *ngIf="form.get('email')?.hasError('required')">The email is required</mat-error>
+                                    <mat-error *ngIf="form.get('email')?.hasError('email')">The email invalid! Please try again-> ex: abc@gmail.com</mat-error>
                                 </mat-form-field>
                                 <br>
                                 <!--Password-->
                                 <mat-form-field style="width: 250px" appearance="outline">
                                     <mat-label>Password</mat-label>
-                                    <input matInput [type]="hide ? 'password' : 'text'"  placeholder="Enter the password" name="password" required minlength="6" maxlength="50" [(ngModel)]="form.password" #password="ngModel">
+                                    <input matInput [type]="hide ? 'password' : 'text'"  placeholder="Enter the password" formControlName="password">
                                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label] = "'Hide password'" [attr.aria-pressed]="hide">
                                         <mat-icon color="primary">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                     </button>
-                                    <mat-error *ngIf="password.hasError('required')">The password is required</mat-error>
-                                    <mat-error *ngIf="password.hasError('minlength')">The password more than 3 characters</mat-error>
-                                    <mat-error *ngIf="password.hasError('maxlength')">The password is less than 50 characters</mat-error>
+                                    <mat-error *ngIf="form.get('password')?.hasError('required')">The password is required</mat-error>
+                                    <mat-error *ngIf="form.get('password')?.hasError('minlength')">The password more than 3 characters</mat-error>
                                 </mat-form-field>
                                 <br>
-                                <button mat-stroked-button color="primary" class="mat-button-toggle-group btn-outline-primary">Register
+<!--                                Confirmpassword-->
+                                <mat-form-field style="width: 350px" appearance="outline">
+                                    <mat-label>Enter Confirm Password</mat-label>
+                                    <input name="confirmPassword" formControlName="confirmPassword" matInput [type]="hide ? 'password' : 'text'" [errorStateMatcher]="matcher">
+                                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                        <mat-icon color="accent">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                    </button>
+                                    <mat-error *ngIf="form.hasError('notSame')">
+                                        The Confirm Password does not match the New Password
+                                    </mat-error>
+                                </mat-form-field><br>
+                                <button [disabled]="form.invalid" mat-stroked-button color="primary" class="mat-button-toggle-group btn-outline-primary">Register
                                     <mat-icon color="primary" matSuffix>add_circle_outline</mat-icon>
                                 </button>
                             </form>
