--- a/src/app/upload/upload-avatar/upload-avatar.component.html
+++ b/src/app/upload/upload-avatar/upload-avatar.component.html
@@ -1,7 +1,10 @@
 <div>
-    <input type="file" (change)="onFileChange($event)">
-    <button *ngIf="downloadUrl? !selectedFile:selectedFile" mat-stroked-button color="accent" class="mat-button-toggle-group btn-outline-success" (click)="onUpload()">UpLoad Avatar</button>
-    <div *ngIf="downloadUrl" style="margin-bottom: 10px; margin-top: 10px">
-        <img [src]="downloadUrl" style="width: 300px; height: auto">
+    <div class="input-group mb-3" style="width: 350px; margin-left: 40px">
+        <label class="input-group-text" for="inputGroupFile01">Ảnh</label>
+        <input type="file" class="form-control" id="inputGroupFile01" (change)="onFileChange($event)">
+        <mat-spinner [diameter]="30" class="text-center" *ngIf="checkUpLoadFile"></mat-spinner>
+        <div *ngIf="downloadUrl" style="margin-bottom: 10px; margin-top: 10px">
+            <img [src]="downloadUrl" style="width: 300px; height: auto">
+        </div>
     </div>
 </div>
