--- a/src/app/profile/friend/friend.component.html
+++ b/src/app/profile/friend/friend.component.html
@@ -11,7 +11,7 @@
                                         <div class="row">
                                             <div class="col-lg-6">
                                                 <div class="align-left">
-                                                    <h5>Friends / Followers <span>44</span></h5>
+                                                    <h5>Friends  <span>{{sumFriend}}</span></h5>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
@@ -54,7 +54,6 @@
                                             <div class="friend-box">
                                                 <figure>
                                                     <img src="../../../assets/images/resources/frnd-cover1.jpg" alt="">
-                                                    <span>Followers: 120</span>
                                                 </figure>
                                                 <div class="frnd-meta">
                                                     <img src="../../../assets/images/resources/frnd-figure1.jpg" alt="">
