create logo for team

--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -212,7 +212,7 @@
 
     <div class="topbar stick">
         <div class="logo">
-            <a title="" routerLink="/home"><img src="../../assets/images/logo.png" alt=""></a>
+            <a title="" routerLink="/home"><img style="top: 0" src="../../assets/images/logosIShareLife2/logoIShareLifeMain.png" alt=""></a>
         </div>
         <div class="top-area">
             <div class="main-menu">
