--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <div class="wavy-wraper">
   <div class="wavy">
-    <span style="--i:1;">p</span>
-    <span style="--i:2;">i</span>
-    <span style="--i:3;">t</span>
-    <span style="--i:4;">n</span>
-    <span style="--i:5;">i</span>
-    <span style="--i:6;">k</span>
+    <span style="--i:1;">i</span>
+    <span style="--i:2;">S</span>
+    <span style="--i:3;">h</span>
+    <span style="--i:4;">a</span>
+    <span style="--i:5;">r</span>
+    <span style="--i:6;">e</span>
+    <span style="--i:6;">L</span>
+    <span style="--i:6;">i</span>
+    <span style="--i:6;">f</span>
+    <span style="--i:6;">e</span>
     <span style="--i:7;">.</span>
     <span style="--i:8;">.</span>
     <span style="--i:9;">.</span>
