--- a/src/app/posting/posting/posting-create/posting-create.component.html
+++ b/src/app/posting/posting/posting-create/posting-create.component.html
@@ -5,8 +5,8 @@
         <figure>
             <img style="width: 45px; height: 45px" src="{{avatar}}" alt="">
         </figure>
+        <form #f="ngForm" (ngSubmit)="f.form.valid" novalidate>
         <div class="newpst-input">
-            <form #f="ngForm" (ngSubmit)="f.form.valid" novalidate>
                 <div class="dropdown">
                     <mat-form-field appearance="fill">
                         <mat-select [(ngModel)]="form.select"  name="select" matNativeControl required>
@@ -15,7 +15,7 @@
                     </mat-form-field>
                 </div>
                 <textarea rows="2" placeholder="Share some what you are thinking?" [(ngModel)]="form.content" name="content" required></textarea>
-            </form>
+
         </div>
         <div class="attachments">
             <ul>
@@ -31,9 +31,10 @@
                     </label>
                 </li>
                 <li>
-                    <i class="fa fa-image"></i>
+                    <i class="fa fa-image" (click)="openDialog()"></i>
                     <label class="fileContainer">
-                        <input type="file">
+<!--                        <app-upload-images (giveUrlToCreate)="uploadImages($event)"></app-upload-images>-->
+
                     </label>
                 </li>
                 <li>
@@ -54,6 +55,7 @@
             </ul>
             <button class="post-btn" (click)="ngSubmit()" type="submit" data-ripple="">Post</button>
         </div>
+        </form>
         <div class="add-location-post">
             <span>Drag map point to selected area</span>
             <div class="row">
