--- a/src/app/profile/friend/friend.component.html
+++ b/src/app/profile/friend/friend.component.html
@@ -22,27 +22,27 @@
                                                             <button type="submit"><i class="fa fa-search"></i></button>
                                                         </form>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-4 col-sm-4">
-                                                        <div class="select-options">
-                                                            <select class="select">
-                                                                <option>Sort by</option>
-                                                                <option>A to Z</option>
-                                                                <option>See All</option>
-                                                                <option>Newest</option>
-                                                                <option>oldest</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-1 col-md-1 col-sm-1">
-                                                        <div class="option-list">
-                                                            <i class="fa fa-ellipsis-v"></i>
-                                                            <ul>
-                                                                <li><a title="" href="#">Show Friends Public</a></li>
-                                                                <li><a title="" href="#">Show Friends Private</a></li>
-                                                                <li><a title="" href="#">Mute Notifications</a></li>
-                                                            </ul>
-                                                        </div>
-                                                    </div>
+<!--                                                    <div class="col-lg-4 col-md-4 col-sm-4">-->
+<!--                                                        <div class="select-options">-->
+<!--                                                            <select class="select">-->
+<!--                                                                <option>Sort by</option>-->
+<!--                                                                <option>A to Z</option>-->
+<!--                                                                <option>See All</option>-->
+<!--                                                                <option>Newest</option>-->
+<!--                                                                <option>oldest</option>-->
+<!--                                                            </select>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="col-lg-1 col-md-1 col-sm-1">-->
+<!--                                                        <div class="option-list">-->
+<!--                                                            <i class="fa fa-ellipsis-v"></i>-->
+<!--                                                            <ul>-->
+<!--                                                                <li><a title="" href="#">Show Friends Public</a></li>-->
+<!--                                                                <li><a title="" href="#">Show Friends Private</a></li>-->
+<!--                                                                <li><a title="" href="#">Mute Notifications</a></li>-->
+<!--                                                            </ul>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
                                                 </div>
                                             </div>
                                         </div>
@@ -50,37 +50,6 @@
                                 </div><!-- title block -->
                                 <div class="central-meta padding30">
                                     <div class="row">
-                                        <div class="col-lg-3 col-md-6 col-sm-6">
-                                            <div class="friend-box">
-                                                <figure>
-                                                    <img src="../../../assets/images/resources/frnd-cover1.jpg" alt="">
-                                                </figure>
-                                                <div class="frnd-meta">
-                                                    <img src="../../../assets/images/resources/frnd-figure1.jpg" alt="">
-                                                    <div class="frnd-name">
-                                                        <a href="#" title="">Adam James</a>
-                                                        <span>California, USA</span>
-                                                    </div>
-                                                    <ul class="frnd-info">
-                                                        <li><span>Friends:</span> 223 (2 mutule friends)</li>
-                                                        <li><span>Videos:</span> 240</li>
-                                                        <li><span>Photos:</span> 144</li>
-                                                        <li><span>Post:</span> 250</li>
-                                                        <li><span>Since:</span> December, 2014</li>
-                                                    </ul>
-                                                    <a class="send-mesg" href="#" title="">Message</a>
-                                                    <div class="more-opotnz">
-                                                        <i class="fa fa-ellipsis-h"></i>
-                                                        <ul>
-                                                            <li><a href="#" title="">Block</a></li>
-                                                            <li><a href="#" title="">UnBlock</a></li>
-                                                            <li><a href="#" title="">Mute Notifications</a></li>
-                                                            <li><a href="#" title="">hide from friend list</a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div *ngFor="let element of friends">
                                             <div class="col-lg-3 col-md-6 col-sm-6">
                                                 <div class="friend-box">
@@ -90,7 +59,7 @@
                                                     <div class="frnd-meta">
                                                         <img [src]="element.avatar" alt="avatar" style="height: 70px ;width: 70px">
                                                         <div class="frnd-name">
-                                                            <a href="#" title="">{{element.name}}</a>
+                                                            <a routerLink="/home/profile/{{element.id}}">{{element.name}}</a>
                                                         </div>
                                                         <ul class="frnd-info">
                                                             <li><span>Phone:{{element.phone}}</span> </li>
