fixed avatar of comment

--- a/src/app/posting/posting/card/card.component.html
+++ b/src/app/posting/posting/card/card.component.html
@@ -81,7 +81,7 @@
                     </li>
                     <li class="post-comment">
                         <div class="comet-avatar">
-                            <img src="{{posting.owner.avatar}}" alt="">
+                            <img src="{{avatarLogging}}" alt="">
                         </div>
                         <div class="post-comt-box">
                             <form #f="ngForm" (ngSubmit)="onSubmit()">
