Added posting with images

--- a/src/app/posting/posting/card/card.component.html
+++ b/src/app/posting/posting/card/card.component.html
@@ -28,7 +28,7 @@
                 <figure>
                     <div class="img-bunch">
                         <div class="row">
-                            <div *ngFor="let img of posting.images" class="col-lg-6 col-md-6 col-sm-6">
+                            <div *ngFor="let img of posting._imagesArray" class="col-lg-6 col-md-6 col-sm-6">
                                 <figure>
                                     <a class="strip" href="{{img}}" title="" data-strip-group="mygroup"
                                        data-strip-group-options="loop: false">
