--- a/src/app/posting/upload-images/upload-images.component.html
+++ b/src/app/posting/upload-images/upload-images.component.html
@@ -1,6 +1,7 @@
-       <input type="file" class="form-control" id="inputGroupFile01" (change)="onFileChange($event)" multiple>
+       <mat-label>Choose single or multiple images to upload!</mat-label>
+<input type="file" class="form-control" id="inputGroupFile01" (change)="onFileChange($event)">
         <mat-spinner [diameter]="30" class="text-center" *ngIf="checkUpLoadFile"></mat-spinner>
-        <div *ngIf="downloadUrl" style="margin-bottom: 10px; margin-top: 10px">
-            <img [src]="downloadUrl" style="width: 300px; height: auto">
+        <div *ngFor="let img of images" style="margin-bottom: 10px; margin-top: 10px">
+            <img [src]="img" style="width: 300px; height: auto">
         </div>
 
