Added delete post function

--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -269,7 +269,7 @@
 
                 <!---Posting--->
                 <div class="loadMore">
-                    <app-posting [postings]="newPostings"></app-posting>
+                    <app-posting (idDeletePosting)="deletePosting($event)" [postings]="newPostings"></app-posting>
                 </div>
 
 
