--- a/src/app/posting/posting/card/card.component.html
+++ b/src/app/posting/posting/card/card.component.html
@@ -9,7 +9,7 @@
                     <div class="more-post-optns"><i class="ti-more-alt"></i>
                         <ul>
                             <li (click)="openDialogEdit()"><i class="fa fa-pencil-square-o" (click)="openDialogEdit()"></i>Edit Post</li>
-                            <li><i class="fa fa-trash-o"></i>Delete Post</li>
+                            <li (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Post</li>
                             <li class="bad-report"><i class="fa fa-flag"></i>Report Post</li>
                             <li><i class="fa fa-address-card-o"></i>Boost This Post</li>
                             <li><i class="fa fa-clock-o"></i>Schedule Post</li>
