--- a/src/app/posting/posting/comment/comment-edit/comment-edit.component.html
+++ b/src/app/posting/posting/comment/comment-edit/comment-edit.component.html
@@ -1,12 +1,11 @@
 <h1 mat-dialog-title>EDIT COMMENT</h1>
 <div mat-dialog-content>
-    <p>Enter your new comment</p>
     <mat-form-field appearance="fill">
         <mat-label>New Comment</mat-label>
-        <input matInput [(ngModel)]="data._content">
+        <input matInput [(ngModel)]="data.content">
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="data._content" cdkFocusInitial>Save</button>
+    <button mat-button [mat-dialog-close]="data.content" cdkFocusInitial>Save</button>
 </div>
