fix list friend

--- a/src/app/profile/friend/friend.component.html
+++ b/src/app/profile/friend/friend.component.html
@@ -36,7 +36,7 @@
                                                         <img src="../../../assets/images/resources/frnd-cover1.jpg" alt="">
                                                     </figure>
                                                     <div class="frnd-meta">
-                                                        <img [src]="element.avatar" alt="avatar" style="height: 70px ;width: 70px">
+                                                        <img [src]="element.avatar" alt="avatar" >
                                                         <div class="frnd-name">
                                                             <a routerLink="/home/profile/{{element.id}}">{{element.name}}</a>
                                                         </div>
