--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7767,13 +7767,15 @@ input[type="checkbox"]:checked + label{color: #000;}
 }
 
 .friend-box {
+    width: 236px;
+    height: 372px;
     background: #fff none repeat scroll 0 0;
     border-radius: 4px;
 	border: 1px solid #ede9e9;
     display: inline-block;
     margin-bottom: 20px;
     position: relative;
-    width: 100%;
+    /*width: 100%;*/
 }
 .friend-box > figure {
     margin: 0;
@@ -7809,6 +7811,8 @@ input[type="checkbox"]:checked + label{color: #000;}
     width: 100%;
 }
 .frnd-meta > img {
+    width: 84px;
+    height: 84px;
     border: 2px solid #fff;
     border-radius: 100%;
     display: inline-block;
