Fixed bugs of posting profile

--- a/src/app/posting/posting/card/card.component.html
+++ b/src/app/posting/posting/card/card.component.html
@@ -19,7 +19,7 @@
                             </ul>
                         </div>
                     </div>
-                    <ins><a routerLink="/home/profile/{{posting.owner.id}}" title="">{{posting.owner.name}}</a></ins>
+                    <ins><a (click)="navigateProfile(posting.owner.id)" title="">{{posting.owner.name}}</a></ins>
                     <span><i *ngIf="posting.postingStatusType.id === 1" class="fa fa-globe"></i><i class="fa fa-lock" *ngIf="posting.postingStatusType.id === 2"></i><i class="fa fa-users" *ngIf="posting.postingStatusType.id === 3" style="font-size: 12px"></i> published: {{posting.dateOfPosting}} </span>
                 </div>
                 <div class="post-meta">
@@ -101,7 +101,7 @@
 
 <!------Profile---------->
 <div *ngIf="isProfile === true">
-    <div *ngIf="posting.owner.id === idLogging" class="central-meta item">
+    <div *ngIf="posting.owner.id === idProfileFinal && idProfileFinal !== idLogging && posting.postingStatusType.type !== 'Private' || idProfileFinal === idLogging && posting.owner.id === idProfileFinal" class="central-meta item">
         <div class="user-post">
             <div class="friend-info">
                 <figure>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <ins><a routerLink="/home/profile/{{posting.owner.id}}" title="">{{posting.owner.name}}</a></ins>
-                    <span><mat-icon style="font-size: 12px">{{statusPosting}}</mat-icon> published: {{posting.dateOfPosting}} </span>
+                    <span><i *ngIf="posting.postingStatusType.id === 1" class="fa fa-globe"></i><i class="fa fa-lock" *ngIf="posting.postingStatusType.id === 2"></i><i class="fa fa-users" *ngIf="posting.postingStatusType.id === 3" style="font-size: 12px"></i> published: {{posting.dateOfPosting}} </span>
                 </div>
                 <div class="post-meta">
                     <p>
