--- a/src/app/profile/time-line/time-line.component.html
+++ b/src/app/profile/time-line/time-line.component.html
@@ -267,13 +267,16 @@
                             </div><!-- sidebar -->
                             <div class="col-lg-6">
                                 <!-- add post new box -->
-                                <app-posting-create (postingChange)="create($event)"></app-posting-create>
+                                <div *ngIf="idLogging === idProfileFinal">
+                                    <app-posting-create (postingChange)="create($event)"></app-posting-create>
+                                </div>
+
 
 
 
 
                                 <div class="loadMore">
-                                    <app-posting [isProfile]="true" (commentIdDelete)="deleteComment($event)" (idDeletePosting)="deletePosting($event)" [postings]="newPostings"></app-posting>
+                                    <app-posting [getIdProfileChoice]="idProfileFinal" (idProfile)="getProfileId($event)" [isProfile]="true" (commentIdDelete)="deleteComment($event)" (idDeletePosting)="deletePosting($event)" [postings]="newPostings"></app-posting>
                                 </div>
                             </div><!-- centerl meta -->
                             <div class="col-lg-3">
