Fixed bugs of profile page

--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -13,7 +13,7 @@
             <img src="{{comment.owner.avatar}}" alt="">
         </div>
         <div class="we-comment">
-            <h5><a style="font-weight: bold" href="time-line.html" title="">{{comment.owner.name}} </a></h5>
+            <h5><a style="font-weight: bold; cursor: pointer" (click)="navigateToProfile(comment.owner.id)" title="">{{comment.owner.name}} </a></h5>
             <p style="color: #3a3939; font-family: Arial">{{comment.content}}</p>
             <div class="inline-itms">
                 <span style="color: darkgrey">{{comment.dateOfComment}}</span>
