Fixed bugs of profile page

--- a/src/app/posting/posting/card/card.component.html
+++ b/src/app/posting/posting/card/card.component.html
@@ -180,7 +180,7 @@
                         </div>
 
                         <li>
-                            <a (click)="getAllComments(posting.id)" title="" class="showmore underline">more comments+</a>
+                            <a (click)="getAllComments(posting.id)" style="cursor: pointer" title="" class="showmore underline">more comments+</a>
                         </li>
                         <li class="post-comment">
                             <div class="comet-avatar">
