--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -17,6 +17,7 @@
             <p style="color: #3a3939; font-family: Arial">{{comment.content}}</p>
             <div class="inline-itms">
                 <span style="color: darkgrey">{{comment.dateOfComment}}</span>
+                <a href="#" title=""><i class="fa fa-heart"></i><span>20</span></a>
             </div>
         </div>
  </li>
